# simple_gtk_app

./: com.github.coolhalfing79.SimpleGtkApp.json  meson.build
data/: com.github.coolhalfing79.SimpleGtkApp.appdata.xml.in  com.github.coolhalfing79.SimpleGtkApp.desktop.in  com.github.coolhalfing79.SimpleGtkApp.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  simple_gtk_app.gresource.xml  simple_gtk_app.in  window.py  window.ui
